2005-12-23  Alex Roitman  <shura@gramps-project.org>
	* src/EditPerson.py: Swap menu/submenu labels.
	* src/EventEdit.py: Menu label fixes.

2005-12-22  Don Allingham  <don@gramps-project.org>
	* src/AddrEdit.py: More window management
	* src/AttrEdit.py: More window management
	* src/DisplayState.py: added push_message
	* src/EditPerson.py: More window management
	* src/ListBox.py: More window management
	* src/NameEdit.py: More window management
	* src/Navigation.py: More window management
	* src/PeopleModel.py: More window management
	* src/PersonView.py: More window management
	* src/ViewManager.py: better handling of ui and action groups

2005-12-22  Alex Roitman  <shura@gramps-project.org>
	* test/RunAllTests.py: Change header.
	* src/EventEdit.py: Fix build_ methods.
	* src/MediaView.py: Skip empty selections.
	* src/ToolTips.py (PersonTip.get_tip): Use new birth_ref interface.

2005-12-22  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: window management improvements
	* src/EditPerson.py: window management improvements
	* src/EditPlace.py: window management improvements
	* src/EditSource.py: window management improvements
	* src/EventEdit.py: window management improvements
	* src/EventView.py: window management improvements
	* src/ListBox.py: window management improvements
	* src/NameEdit.py: window management improvements
	* src/SourceView.py: window management improvements
	* src/Sources.py: window management improvements

2005-12-22 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ImageSelect.py: changed display_refs to use find_backlink_handles and updated
	GlobalMediaProperties to use new UI model.
	* src/MediaView.py: changed call to GlobalMediaProperties to use new UI params.
	* src/Utils.py: added support for Gtk.labels to bold/unbold/temp label util funcs.

2005-12-22 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditPlace.py: changed display_references to use find_backlink_handles